# SwiftTest

./: .gitignore  CMakeLists.txt
include/: rs232.h
src/: CMakeLists.txt  main.c  main.cpp  rs232.c
